--- a/src/browser_action/browser_action.html
+++ b/src/browser_action/browser_action.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link rel="stylesheet" type="text/css" href="milligram-1.3.0/css.css">
-	<style>
-		body{
-			width: 400px;
-		}
-	</style>
-</head>
-<body>
-
-	<h1>Highlight Lists</h1>
-
-	<table>
-		<thead>
-		  <tr>
-
-		  </tr>
-		</thead>
-		<tbody>
-
-		  <tr>
-
-
-
-		  </tr>
-		</tbody>
-	  </table>
-</body>
-<script src="javasciptHome.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="milligram-1.3.0/css.css" />
+    <style>
+      body {
+        width: 400px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <h1>Highlight Lists</h1>
+        <a
+          href="edit.html"
+          value="Add New"
+          class="button button-outline"
+          id="newList"
+          >New</a
+        >
+      </div>
+      <div class="row">
+        <table id="table">
+          <thead>
+            <tr></tr>
+          </thead>
+          <tbody>
+            <tr></tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </body>
+  <script src="javasciptHome.js"></script>
 </html>
