--- a/src/browser_action/edit.html
+++ b/src/browser_action/edit.html
@@ -1,26 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="milligram-1.3.0/css.css">
+    <link rel="stylesheet" type="text/css" href="milligram-1.3.0/css.css" />
+    <style>
+      body {
+        width: 600px;
+      }
+      #blue {
+        background-color: #0099ff;
+        color: white;
+        text-align: center;
+      }
 
-</head>
-<body>
+      #green {
+        background-color: #33cc33;
+        color: white;
+        text-align: center;
+      }
+
+      #yellow {
+        background-color: yellow;
+        color: black;
+        text-align: center;
+      }
+
+      #red {
+        background-color: red;
+        color: black;
+        text-align: center;
+      }
+
+      #pink {
+        background-color: pink;
+        color: black;
+        text-align: center;
+      }
+      #blueGradient {
+        color: white;
+
+        background: rgb(2, 0, 36);
+        background: linear-gradient(
+          90deg,
+          rgba(2, 0, 36, 1) 0%,
+          rgba(9, 9, 121, 1) 35%,
+          rgba(0, 212, 255, 1) 100%
+        );
+      }
+    </style>
+  </head>
+  <body>
     <form>
-        <fieldset>
-          <label for="Title">Title</label>
-          <input type="text" placeholder="" id="Title">
-          <label for="list">List</label>
-          <p>Put a comma between items.</p>
-          <textarea placeholder="Google, Facebook, Yahoo" id="list"></textarea>
-          <div class="float-right">
-          </div>
-          <input class="button button-outline"></input>
-        </fieldset>
-      </form>
-</body>
-<script src="javascipt.js"></script>
+      <fieldset>
+        <label for="Title">Title</label>
+        <input type="text" placeholder="" id="Title" />
+        <label for="Colour">Colour</label>
 
+        <select id="Colour">
+          <option id="blue" value="blue">Blue</option>
+          <option id="green" value="green">Green</option>
+          <option id="yellow" value="yellow">Yellow</option>
+          <option id="red" value="red">Red</option>
+          <option id="pink" value="pink">Pink</option>
+          <option id="blueGradient" value="blueGradient">BlueGradient</option>
+        </select>
+
+        <label for="list">List</label>
+        <p>Put a comma between items.</p>
+        <textarea placeholder="Google, Facebook, Yahoo" id="list"></textarea>
+        <div class="float-right"></div>
+        <a
+          href="browser_action.html"
+          value="Add New"
+          class="button button-outline"
+          id="save"
+          >Save</a
+        >
+      </fieldset>
+    </form>
+  </body>
+  <script src="javascipt.js"></script>
 </html>
