--- a/src/bg/background.html
+++ b/src/bg/background.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script type="text/javascript" src="..\browser_action\javascipt.js"></script>
+  <script type="text/javascript" src="..\browser_action\javasciptHome.js"></script>
   <script type="text/javascript" src="background.js"></script>
 </head>
 </html>
