--- a/src/browser_action/edit.html
+++ b/src/browser_action/edit.html
@@ -55,7 +55,7 @@
     <form>
       <fieldset>
         <label for="Title">Title</label>
-        <input type="text" placeholder="" id="Title" />
+        <input type="text" placeholder="" id="Title" required/>
         <label for="Colour">Colour</label>
 
         <select id="Colour">
@@ -71,13 +71,23 @@
         <p>Put a comma between items.</p>
         <textarea placeholder="Google, Facebook, Yahoo" id="list"></textarea>
         <div class="float-right"></div>
-        <a
-          href="browser_action.html"
+
+
+
+
+          <input href="browser_action.html"
           value="Add New"
           class="button button-outline"
-          id="save"
-          >Save</a
-        >
+          id="save" type="submit">
+
+
+
+
+
+
+
+
+
       </fieldset>
     </form>
   </body>
