--- a/src/browser_action/browser_action.html
+++ b/src/browser_action/browser_action.html
@@ -7,18 +7,22 @@
     <link rel="stylesheet" type="text/css" href="milligram-1.3.0/css.css" />
     <style>
       body {
-        width: 400px;
+        width: 500px;
       }
     </style>
   </head>
   <body>
     <div class="container">
+      <h1 style="float: left; white-space: nowrap;"><img src="..\..\icons\icon48.png"> Highlighter</h1>
+
+
+
+
       <div class="row">
-        <h1>Highlight Lists</h1>
         <a
           href="edit.html"
           value="Add New"
-          class="button button-outline"
+          class="button"
           id="newList"
           >New</a
         >
