--- a/src/browser_action/edit.html
+++ b/src/browser_action/edit.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="milligram-1.3.0/css.css" />
     <style>
       body {
-        width: 600px;
+        width: 500px;
       }
       #blue {
         background-color: #0099ff;
@@ -54,6 +54,7 @@
   <body>
     <form>
       <fieldset>
+        <div id="alerts"></div>
         <label for="Title">Title</label>
         <input type="text" placeholder="" id="Title" required/>
         <label for="Colour">Colour</label>
@@ -64,7 +65,6 @@
           <option id="yellow" value="yellow">Yellow</option>
           <option id="red" value="red">Red</option>
           <option id="pink" value="pink">Pink</option>
-          <option id="blueGradient" value="blueGradient">BlueGradient</option>
         </select>
 
         <label for="list">List</label>
@@ -75,11 +75,10 @@
 
 
 
-          <input href="browser_action.html"
+          <a 
           value="Add New"
           class="button button-outline"
-          id="save" type="submit">
-
+          id="save" type="submit" for="Title">Save</a>
 
 
 
